MeetupDevoteam_26012021/01-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: meetupdvo
---
apiVersion: v1
kind: Pod
metadata:
  name: meetupdvo
  namespace: meetupdvo
  labels:
    app: nginx
spec:
    containers:
    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80
