MeetupDevoteam_26012021/02-nginxIngress.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: meetupdvoingress
---
apiVersion: v1
kind: Pod
metadata:
  name: meetupdvoingress
  namespace: meetupdvoingress
  labels:
    app: meetupdvoingress
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: meetupdvoingress
  namespace: meetupdvoingress
spec:
  selector:
    app: meetupdvoingress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meetupdvoingress
  namespace: meetupdvoingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: meetupdvoingress
          servicePort: 80
